--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,7 +34,7 @@ file(GLOB_RECURSE P2p p2p/*)
 file(GLOB_RECURSE Rpc rpc/*)
 file(GLOB_RECURSE Serialization serialization/*)
 file(GLOB_RECURSE SubWallets subwallets/*)
-file(GLOB_RECURSE TurtleCoind daemon/*)
+file(GLOB_RECURSE Amphiond daemon/*)
 file(GLOB_RECURSE Utilities utilities/*)
 file(GLOB_RECURSE WalletApi walletapi/*)
 file(GLOB_RECURSE WalletBackend walletbackend/*)
@@ -49,7 +49,7 @@ else ()
 endif ()
 
 # Group the files together in IDEs
-source_group("" FILES $${Common} ${Config} ${Crypto} ${CryptoNoteCore} ${CryptoNoteProtocol} ${TurtleCoind} ${Http} ${Logging} ${Logger} ${miner} ${Mnemonics} ${Nigel} ${P2p} ${Rpc} ${Serialization} ${System} ${Wallet} ${WalletApi} ${WalletBackend} ${zedwallet++} ${CryptoTest} ${Errors} ${Utilities} ${WalletUpgrader} ${SubWallets})
+source_group("" FILES $${Common} ${Config} ${Crypto} ${CryptoNoteCore} ${CryptoNoteProtocol} ${Amphiond} ${Http} ${Logging} ${Logger} ${miner} ${Mnemonics} ${Nigel} ${P2p} ${Rpc} ${Serialization} ${System} ${Wallet} ${WalletApi} ${WalletBackend} ${zedwallet++} ${CryptoTest} ${Errors} ${Utilities} ${WalletUpgrader} ${SubWallets})
 
 # Define a group of files as a library to link against
 add_library(Common STATIC ${Common})
@@ -96,7 +96,7 @@ add_executable(zedwallet++ ${zedwallet++} ${ZED_WALLET_SOURCES_OS})
 
 if (MSVC)
     target_link_libraries(System ws2_32)
-    target_link_libraries(TurtleCoind Rpcrt4 ws2_32 advapi32 crypt32 gdi32 user32)
+    target_link_libraries(Amphiond Rpcrt4 ws2_32 advapi32 crypt32 gdi32 user32)
     target_link_libraries(zedwallet++ ws2_32 advapi32 crypt32 gdi32 user32)
     target_link_libraries(WalletApi ws2_32 advapi32 crypt32 gdi32 user32)
     target_link_libraries(miner ws2_32 advapi32 crypt32 gdi32 user32)
@@ -152,12 +152,12 @@ add_dependencies(cryptotest version)
 add_dependencies(miner version)
 add_dependencies(P2P version)
 add_dependencies(Rpc version)
-add_dependencies(TurtleCoind version)
+add_dependencies(Amphiond version)
 add_dependencies(WalletApi version)
 add_dependencies(zedwallet++ version)
 
 # Finally build the binaries
-set_property(TARGET TurtleCoind PROPERTY OUTPUT_NAME "TurtleCoind")
+set_property(TARGET Amphiond PROPERTY OUTPUT_NAME "Amphiond")
 set_property(TARGET zedwallet++ PROPERTY OUTPUT_NAME "zedwallet")
 set_property(TARGET miner PROPERTY OUTPUT_NAME "miner")
 set_property(TARGET cryptotest PROPERTY OUTPUT_NAME "cryptotest")
@@ -165,7 +165,7 @@ set_property(TARGET WalletApi PROPERTY OUTPUT_NAME "wallet-api")
 
 # Additional make targets, can be used to build a subset of the targets
 # e.g. make pool will build only TurtleCoind and service
-add_custom_target(pool DEPENDS TurtleCoind WalletApi)
-add_custom_target(solominer DEPENDS TurtleCoind zedwallet++ miner)
-add_custom_target(cli DEPENDS TurtleCoind zedwallet++)
+add_custom_target(pool DEPENDS Amphiond WalletApi)
+add_custom_target(solominer DEPENDS Amphiond zedwallet++ miner)
+add_custom_target(cli DEPENDS Amphiond zedwallet++)
 add_custom_target(zedwallet DEPENDS zedwallet++)
