--- a/src/config/version.h.in
+++ b/src/config/version.h.in
@@ -1,9 +1,9 @@
 #define STR_HELPER(x) #x
 #define STR(x) STR_HELPER(x)
 
-#define PROJECT_NAME "TurtleCoin"
-#define PROJECT_SITE "http://www.turtlecoin.lol"
-#define PROJECT_COPYRIGHT "Copyright 2018-2020, The TurtleCoin Developers"
+#define PROJECT_NAME "Amphion"
+#define PROJECT_SITE "http://www.Amphion.icu"
+#define PROJECT_COPYRIGHT "Copyright 2020, The Amphion Developers"
 #define APP_VER_MAJOR 1
 #define APP_VER_MINOR 0
 #define APP_VER_REV 0
