--- a/src/config/version.h.in
+++ b/src/config/version.h.in
@@ -3,7 +3,7 @@
 
 #define PROJECT_NAME "Amphion"
 #define PROJECT_SITE "http://www.Amphion.icu"
-#define PROJECT_COPYRIGHT "Copyright 2020, The Amphion Developers"
+#define PROJECT_COPYRIGHT "Copyright 2020, The Amphion Project"
 #define APP_VER_MAJOR 0
 #define APP_VER_MINOR 0
 #define APP_VER_REV 1
